@@ -1,4 +1,8 @@
 Changes in 1.7.3 (??.??.2011)
+
+ - Document that triangle3d::isPointInside should not be used with int's.
+
+ - triangle3d::isPointInsideFast handles 'on-border' cases now consistently.
  
  - Bugfix: vector2d.normalize() and vector3d.normalize() had returned wrong results with very short vectors since  Irrlicht 1.5. Thanks to Willem Swart for Bugreport + testcase.
 
@@ -19,8 +23,6 @@ Changes in 1.7.3 (??.??.2011)
  - editbox no longer moves text into next line when it fails wrapping creating senseless empty lines which mess up scrolling.
 
  - Fix crash in editbox when scrolling up with empty first lines caused by textwrapping.
-
- - triangle3d::isPointInside can now work with larger integers, old version failed already with values in the 3-digit range. It got also faster. (thx @ Eigen for report + testcase and REDDemon for patch proposal).
 
  - Fix focus problem when removing an unfocused modal dialog reported by Reiko here: http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=44358
 
